--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/youngyi666/youngyi666.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "会当凌绝顶，一览众山小"
-sidebar-avatar: /img/img/avatar-m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/img/邮箱头像.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
